added job description and skill creation api
